fixing header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ a:active {
 	align-items: center;
 	background-color: var(--white);
 	box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 10%);
+	z-index: 1;
 }
 
 .primary_logo {
